<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>image_tools_java</name>
  <version>0.0.0</version>
  <description>Tools to capture and play back images with ROS 2 Java</description>
  <maintainer email="jacob@openrobotics.org">Jacob Perron</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_build_type_gradle</buildtool_depend>

  <depend>rcljava</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_gradle</build_type>
  </export>
</package>
